# BestDDR

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml
backend/: check_db.py  fix_db.py  pyproject.toml  seed_supermap.py  seed_supermap_2021.py
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  main.py  password_validator.py  rate_limit.py  seed.py
backend/app/engine/: balance_sheet.py  balancer.py  cash_flow.py  forecast.py  income_statement.py  line_items.py
backend/app/models/: __init__.py  financial.py  user.py
backend/app/routers/: auth.py  companies.py  export.py  line_items.py  periods.py  scenarios.py  templates.py
backend/app/schemas/: auth.py  financial.py
backend/tests/: conftest.py  test_forecast_engine.py  test_health.py
docs/superpowers/plans/: 2026-03-30-fullstack-project-init.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  i18n.ts
frontend/src/components/: AppLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/locales/: en.ts  zh.ts
frontend/src/pages/: CompanyDetail.tsx  Dashboard.tsx  HelpPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: auth.ts  financial.ts
